--- a/static/index.html
+++ b/static/index.html
@@ -2,9 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>nicks-cors-test</title>
+        <title>cors-test</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script type='text/javascript' src="main.js"></script>
     </head>
-    <body onLoad='main();'></body>
+    <body onLoad='main();'>
+        <h1 id="title"></h1>
+        <div id="content-area"><pre id="content"></pre></div>
+    </body>
 </html>
