--- a/static/index.html
+++ b/static/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html>
+
     <head>
-        <meta charset="utf-8"/>
+        <meta charset="utf-8" />
         <title>cors-test</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script type='text/javascript' src="main.js"></script>
     </head>
-    <body onLoad='main();'>
-        <h1 id="title"></h1>
-        <div id="content-area"><pre id="content"></pre></div>
+
+    <body>
+        <h1>CORS Testinator</h1>
+        
+        <label for="url-field">URL: </label>
+        <input id="url-field" size="100" value="https://api.github.com" />
+        <p>
+        <button id="test-button" onclick="main();">Test it!</button>
+        
+        <h2 id="title"></h2>
+        <div id="content-area">
+            <pre id="content"></pre>
+        </div>
     </body>
+
 </html>
