--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
         <title>cors-test</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script type='text/javascript' src="main.js"></script>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -18,7 +19,7 @@
         
         <h2 id="title"></h2>
         <div id="content-area">
-            <pre id="content"></pre>
+            <pre id="content" style="display: none;"></pre>
         </div>
     </body>
 
